akka-javasdk-annotation-processor-tests/component-validation-descriptors/src/test/resources/test-sources/invalid/DeprecatedComponentIdWithPipe.java
package com.example;

import akka.javasdk.annotations.ComponentId;
import akka.javasdk.timedaction.TimedAction;

@ComponentId("invalid|id")
public class DeprecatedComponentIdWithPipe extends TimedAction {
  public Effect test() {
    return effects().done();
  }
}
